--- a/pages/examples/hello-world.mdx
+++ b/pages/examples/hello-world.mdx
@@ -21,5 +21,5 @@ The console provides a way to debug programs by outputting data at various
 points during a programs execution.
 
 If you run `console.log` when writing JavaScript in the
-browser, you would see the output in the browser's console. In Node.js, we
+browser, you would see the output in the browser's console. In Deno, we
 will simply see the output in the terminal.
