fix: update favicon, update examples

--- a/pages/examples/hello-world.mdx
+++ b/pages/examples/hello-world.mdx
@@ -7,10 +7,7 @@ code: |
 output: |
   $ deno run hello-world.js 
   hello world
-furtherReading: https://nodejs.org/api/console.html#console_console
-next:
-  name: Values
-  slug: values
+furtherReading: https://doc.deno.land/https/github.com/denoland/deno/releases/latest/download/lib.deno.d.ts#Console
 ---
 
 The first program you should write is the traditional "hello world"
